Fix: align action columns right

--- a/htdocs/css/mympd.css
+++ b/htdocs/css/mympd.css
@@ -64,6 +64,10 @@ body {
   min-width: 6rem;
 }
 
+td[data-col=Action] {
+  text-align: right;
+}
+
 .albumartbg {
     position: fixed;
     width: 100%;
